[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/vehicles/car_blue_1.png" type="Texture" id=1]
[ext_resource path="res://scenes/vehicles/Vehicle.gd" type="Script" id=2]
[ext_resource path="res://scenes/vehicles/TrailLine.gd" type="Script" id=3]
[ext_resource path="res://scenes/vehicles/Blue Effect Bullet Impact Explosion 32x32.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.9999
height = 72.0002

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 1.76512, 0, 0, Vector2( 1, 0.945946 ), 0.603171, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.298883, 1 )
colors = PoolColorArray( 0, 0, 0, 0.403922, 0, 0, 0, 1 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 512, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 544, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 576, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 608, 352, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), null ],
"loop": false,
"name": "explosion",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 58, 28.5 )

[node name="Vehicle" type="KinematicBody2D"]
script = ExtResource( 2 )
steering_angle = 20
drift_steering_angle = 50
engine_power = 2000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
z_index = 1
texture = ExtResource( 1 )

[node name="TrailPositionFrontLeft" type="Position2D" parent="."]
position = Vector2( 42, -19 )

[node name="TrailLine" type="Line2D" parent="TrailPositionFrontLeft"]
width_curve = SubResource( 3 )
default_color = Color( 0.0235294, 0.027451, 0.027451, 1 )
gradient = SubResource( 2 )
script = ExtResource( 3 )

[node name="TrailPositionRearLeft" type="Position2D" parent="."]
position = Vector2( -43, -19 )

[node name="TrailLine" type="Line2D" parent="TrailPositionRearLeft"]
width_curve = SubResource( 3 )
default_color = Color( 0.0235294, 0.027451, 0.027451, 1 )
gradient = SubResource( 2 )
script = ExtResource( 3 )

[node name="TrailPositionFrontRight" type="Position2D" parent="."]
position = Vector2( 42, 25 )

[node name="TrailLine" type="Line2D" parent="TrailPositionFrontRight"]
width_curve = SubResource( 3 )
default_color = Color( 0.0235294, 0.027451, 0.027451, 1 )
gradient = SubResource( 2 )
script = ExtResource( 3 )

[node name="TrailPositionRearRight" type="Position2D" parent="."]
position = Vector2( -42, 25 )

[node name="TrailLine" type="Line2D" parent="TrailPositionRearRight"]
width_curve = SubResource( 3 )
default_color = Color( 0.0235294, 0.027451, 0.027451, 1 )
gradient = SubResource( 2 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 10, 10 )
z_index = 1
frames = SubResource( 8 )
animation = "idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, 0.5 )
shape = SubResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 1.5, 1.5 )
